syntax = "proto3";
package types;

import "quote.proto";
import "service.proto";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

option go_package = "pkg/types";

service ScheduleService {
  rpc PostSchedule(PostScheduleRequest) returns (PostScheduleResponse) {
    option (google.api.http) = {
      post: "/v1/schedules"
      body: "*"
    };
  }

  rpc PostScheduleBrackets(PostScheduleBracketsRequest) returns (PostScheduleBracketsResponse) {
    option (google.api.http) = {
      post: "/v1/schedules/brackets"
      body: "*"
    };
  }

  rpc PatchSchedule(PatchScheduleRequest) returns (PatchScheduleResponse) {
    option (google.api.http) = {
      patch: "/v1/schedules/{id}"
      body: "*"
    };
  }

  rpc GetSchedules(GetSchedulesRequest) returns (GetSchedulesResponse) {
    option (google.api.http) = {
      get: "/v1/schedules"
    };
  }

  rpc GetScheduleById(GetScheduleByIdRequest) returns (GetScheduleByIdResponse) {
    option (google.api.http) = {
      get: "/v1/schedules/{id}"
    };
  }

  rpc DeleteSchedule(DeleteScheduleRequest) returns (DeleteScheduleResponse) {
    option (google.api.http) = {
      delete: "/v1/schedules/{ids}"
    };
  }

  rpc DisableSchedule(DisableScheduleRequest) returns (DisableScheduleResponse) {
    option (google.api.http) = {
      patch: "/v1/schedules/{id}/disable"
    };
  }
}

enum BookingModes {
  FIRST_COME = 0; 
  DISTRIBUTED = 1; 
}

message ScheduledParts {
  repeated string ids = 1;
  string parttype = 2;
}

message IScheduleBracketSlot {
  string id = 1;
  string scheduleBracketId = 2;
  string startTime = 3;
}

message IScheduleBracket {
  string id = 1;
  bool automatic = 2;
  string scheduleId = 3;
  int32 duration = 4;
  int32 multiplier = 5;
  map<string, IService> services = 6;
  map<string, IScheduleBracketSlot> slots = 7;
  map<string, IQuote> quotes = 8;
  string createdOn = 9;
}

message ISchedule {
  string id = 1;
  string name = 2;
  string startTime = 3;
  string endTime = 4;
  string timezone = 5;
  string scheduleTimeUnitId = 6;
  string scheduleTimeUnitName = 7;
  string bracketTimeUnitId = 8;
  string bracketTimeUnitName = 9;
  string slotTimeUnitId = 10;
  string slotTimeUnitName = 11;
  int32 slotDuration = 12;
  map<string, IScheduleBracket> brackets = 13;
  string createdOn = 14;
  int32 row = 15;
}

message PostScheduleRequest {
  ISchedule schedule = 1 [(google.api.field_behavior) = REQUIRED];
}

message PostScheduleResponse {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message PostScheduleBracketsRequest {
  string scheduleId = 1 [(google.api.field_behavior) = REQUIRED];
  map<string, IScheduleBracket> brackets = 2 [(google.api.field_behavior) = REQUIRED];
}

message PostScheduleBracketsResponse {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
  map<string, IScheduleBracket> brackets = 2 [(google.api.field_behavior) = REQUIRED];
}

message PatchScheduleRequest {
  ISchedule schedule = 1 [(google.api.field_behavior) = REQUIRED];
}

message PatchScheduleResponse {
  bool success = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetSchedulesRequest {}

message GetSchedulesResponse {
  repeated ISchedule schedules = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetScheduleByIdRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetScheduleByIdResponse {
  ISchedule schedule = 1 [(google.api.field_behavior) = REQUIRED];
}

message DeleteScheduleRequest {
  string ids = 1 [(google.api.field_behavior) = REQUIRED];
}

message DeleteScheduleResponse {
  bool success = 1 [(google.api.field_behavior) = REQUIRED];
}

message DisableScheduleRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message DisableScheduleResponse {
  bool success = 1 [(google.api.field_behavior) = REQUIRED];
}

